[package]
name = "bounce-aal-rs"
version = "0.1.0"
authors = ["falkecarlsen <11318702+falkecarlsen@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"
build = "build.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
esp-idf-hal = { version = "0.42.5" , default-features = false}
anyhow = "1.0.75"
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"

[build-dependencies]
embuild = "0.31.3"
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
bindgen = "0.65.1"
